gobotany/static/css/styles.css
/* ... */
#alphabet li.current a {
    color: #000;
}
#alphabet li.current a:hover {
    text-decoration: none;
}
#alphabet li.inactive {
    color: #ccc;
}

#terms {
    background-color: #fff;
    border: 1px solid #e1e1dc;
    clear: left;
    margin-bottom: 30px;
    width: 710px;
}
#terms dt, #terms dd {
    border-top: 1px solid #e1e1dc;
    min-height: 24px;
}
#terms dt {
    clear: left;
    float: left;
    font: 15px "Trebuchet MS", Trebuchet, Helvetica, Arial, sans-serif;
    line-height: 25px;
    padding: 7px 10px 10px 38px;
    width: 190px;
}
#terms dt a {
    float: left;
    margin-left: -34px;
}
#terms dd {
    margin-left: 224px;
    padding: 13px;
}
#terms dt:first-child, #terms dt:first-child + dd {
    border-top: 0;
}


/* Search results styles */

#search-results-list {
    border-top: 1px solid #e1e1dc;
    margin: 15px 0 13px;
    padding: 6px 0 0;
}
#search-results-list .highlighted {
    font-weight: bold;
}
#search-results-list li {    
    border-bottom: 1px solid #e1e1dc;
    padding: 6px 0 10px;
}
#search-results-list li img {
    float: left;
    margin: -1px 10px 0;
    vertical-align: middle;
}
#search-results-list li a {
    font: 15px "Trebuchet MS", Trebuchet, Helvetica, Arial, sans-serif;
    text-decoration: underline;
}
#search-results-list li p {
    line-height: 140%;
    margin-left: 44px;
    margin-top: 2px;
}
.search-navigation {
    text-align: right;
}
.search-navigation p, .search-navigation ul {
    display: inline;
}
.search-navigation li {
    display: inline;
    margin: 0 2px;
}
.search-navigation a {
    text-decoration: underline;
}

/* Family and Genus pages styles */

#family ul.genera, #genus ul.species {
    font: 14px "Trebuchet MS", Trebuchet, Helvetica, Arial, sans-serif;
}
#family .pics, #genus .pics {
    margin-top: 20px;
}
#family .pics div, #genus .pics div {
    float: left;
    margin-right: 20px;
}
#family .pics p, #genus .pics p {
    display: inline-block;
    float: left;
    font: 14px "Trebuchet MS", Trebuchet, Helvetica, Arial, sans-serif;
}
#genus p.family {
    font: 14px "Trebuchet MS", Trebuchet, Helvetica, Arial, sans-serif;
}
#family h4, #genus h4 {
    clear: left;
    padding-top: 30px;
}
#family .family-genera-btn {
    background: url(/static/images/layout/family-btn.png) no-repeat scroll 0 0 transparent;
    clear: both;
    display: block;
    float: left;
    height: 32px;
    margin: 15px 0 0;
    text-indent: -9000px;
    width: 280px;
}
#genus .genus-species-btn {
    background: url(/static/images/layout/genus-btn.png) no-repeat scroll 0 0 transparent;
    clear: both;
    display: block;
    float: left;
    height: 32px;
    margin: 15px 0 0;
    text-indent: -9000px;
    width: 280px;
}
#family img.zoom, #genus img.zoom {
    display: inline-block;
    float: right;
}

/* Advanced Map page styles */

#advanced-map #main p {
    margin: 10px 0 0;
}
#advanced-map #plant-map-list {
	margin: 15px 0;	
}
#advanced-map #plant-map-list .plant-group {
  	cursor: pointer;
	float: left;
	margin: 0 10px 10px 0;
    padding: 14px 0 0 0;
    width: 110px;
}
#advanced-map #plant-map-list .plant-group.last {
	margin: 0 0 10px 0;	
}
#advanced-map #plant-map-list .plant-group.multi-line {
	padding: 0;	
}
#advanced-map .plant-group h5 {
	color: #508e31;
    font-size: 12px;
  	line-height: 120%;
    margin: 0 0 0 0;
	padding: 6px 0 6px 5px;
}
#advanced-map .plant-group div.image,
#advanced-map .plant-subgroup div.image {
	position: relative;	
}
#advanced-map .plant-group .frame {
	border: 5px solid rgba(255, 255, 255, 0.8);
	height: 91px;	
	position: absolute;
	top: 0;
	width: 100px;
	z-index: 100;
}
#advanced-map .plant-group.active .frame {
	border-color: #1a2e12;
}
#advanced-map .plant-group.active h5 {
	background: #1a2e12;
	color: #fff;
}
/* Don't include hover states on smartphones and tablets. */
@media only screen and (min-device-width:1025px) {
    #advanced-map .plant-group:hover .frame {
	    border-color: #1a2e12;
    }
    #advanced-map .plant-group:hover h5 {
	    background: #1a2e12;
	    color: #fff;
    }
    #advanced-map .more-info:hover {
        color: #508e31;
        text-decoration: underline;
    }
}
#advanced-map .plant-group .img-container {
	height: 101px;
	overflow: hidden;
    width: 110px;
	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
	-moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
	-webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
}
#advanced-map #main .plant-group p.more-info {
	background: url(/static/images/icons/more-info.png) left 4px no-repeat transparent;
	margin: 5px 0 0 0;
	padding: 0 0 0 19px;
}

#advanced-map .plant-subgroup {
   	cursor: default;
    float: left;
   	margin: 0 11px 11px 0;
	padding: 17px 0 0 0;
	width: 160px;
}
#advanced-map .plant-subgroup.last {
    margin-right: 0;
}

#advanced-map .plant-subgroup .frame {
  	border: 5px solid #1a2e12;
	height: 129px;	
	position: absolute;
	top: 0;
	width: 150px;
	z-index: 100;
}

#advanced-map .plant-subgroup h5 {
	background: #1a2e12;
	color: #fff;
    font-size: 13px;
    height: 30px;
	line-height: 120%;
	margin: 0 0 0 0;
	padding: 6px;
}
#advanced-map .plant-subgroup .img-container {
	height: 139px;
	overflow: hidden;
	width: 160px;
}
#advanced-map #main .plant-subgroup p.more-info {
	background: url(/static/images/icons/more-info.png) left 4px no-repeat transparent;	
	margin: 5px 0 0 0;
	padding: 0 0 0 19px;
}
#advanced-map a.choose-btn {
	background: url(/static/images/layout/choose-btn.png) 0 0 no-repeat transparent;
	display: block;
	height: 32px;
	margin: 10px 0 5px;
	text-indent: -9000px;
	width: 104px;
}
#advanced-map a.choose-btn:hover {
	background-position: 0 -32px;
}
#advanced-map a.choose-btn:active {
	background-position: 0 -64px;
}

/* Shadowbox close button */
#sb-nav-close {
    background-position: center;
    background-repeat: no-repeat;
    padding: 4px; /* Increase activation area a bit */
    right: -21px !important; /* Place at top right corner */
    top: 6px !important;
}
/* ... */

